--- a/config.h.in
+++ b/config.h.in
@@ -2,9 +2,10 @@
 #define GREEN_CONFIG_H
 
 #define GREEN_NAME "@PROJECT_NAME@"
-#define GREEN_VERSION  "@PROJECT_VERSION@"
+#define GREEN_VERSION "@PROJECT_VERSION@@GREEN_BUILD_ID@"
 #define GREEN_VERSION_MAJOR "@PROJECT_VERSION_MAJOR@"
 #define GREEN_VERSION_MINOR "@PROJECT_VERSION_MINOR@"
 #define GREEN_VERSION_PATCH "@PROJECT_VERSION_PATCH@"
+#define GREEN_ENV "@GREEN_ENV@"
 
 #endif // GREEN_CONFIG_H
