--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,8 @@ stages:
   variables:
     GIT_SUBMODULE_STRATEGY: recursive
   script:
-    - depends/bin/qt-cmake .
+    - depends/bin/qt-cmake -DGREEN_ENV=Testing -DGREEN_BUILD_ID=-$CI_COMMIT_SHORT_SHA .
+    - cat config.h
     - make -j
 
 include:
