--- a/ci/macos-arm64.yml
+++ b/ci/macos-arm64.yml
@@ -23,6 +23,6 @@ macos-arm64:build:
     - .build
   needs: ["macos-arm64:depends"]
   artifacts:
-    name: "$CI_JOB_NAME"
+    name: "$CI_PROJECT_NAME-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
     paths:
       - green.app
