--- a/ci/macos-x86_64.yml
+++ b/ci/macos-x86_64.yml
@@ -23,6 +23,6 @@ macos-x86_64:build:
     - .build
   needs: ["macos-x86_64:depends"]
   artifacts:
-    name: "$CI_JOB_NAME"
+    name: "$CI_PROJECT_NAME-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
     paths:
       - green.app
