--- a/ci/windows-x86_64.yml
+++ b/ci/windows-x86_64.yml
@@ -5,6 +5,6 @@ windows-x86_64:build:
   tags:
     - ga
   artifacts:
-    name: "$CI_JOB_NAME"
+    name: "$CI_PROJECT_NAME-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
     paths:
       - green.exe
