--- a/ci/macos-arm64.yml
+++ b/ci/macos-arm64.yml
@@ -26,3 +26,17 @@ macos-arm64:build:
     name: "$CI_PROJECT_NAME-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
     paths:
       - green.app
+
+macos-arm64:staple:
+  tags:
+    - osxsigner
+  stage: staple
+  artifacts:
+    name: "$CI_PROJECT_NAME-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
+    expire_in: 1 week
+    when: always
+    paths:
+      - green.app
+  needs: ["macos-arm64:build"]
+  script:
+    - tools/macos-staple.sh
