--- a/config.h.in
+++ b/config.h.in
@@ -7,5 +7,6 @@
 #define GREEN_VERSION_MINOR "@PROJECT_VERSION_MINOR@"
 #define GREEN_VERSION_PATCH "@PROJECT_VERSION_PATCH@"
 #define GREEN_ENV "@GREEN_ENV@"
+#define GREEN_LOG_FILE "@GREEN_LOG_FILE@"
 
 #endif // GREEN_CONFIG_H
