--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ stages:
   variables:
     GIT_SUBMODULE_STRATEGY: recursive
   script:
-    - $PREFIX/bin/qt-cmake -DGREEN_ENV=Testing -DGREEN_BUILD_ID=-$CI_COMMIT_SHORT_SHA .
+    - $PREFIX/bin/qt-cmake -DGREEN_ENV=Testing -DGREEN_BUILD_ID=-$CI_COMMIT_SHORT_SHA -DGREEN_LOG_FILE=$CI_COMMIT_BRANCH .
     - make -j
 
 include:
