ci: build universal macos app

--- a/ci/macos-arm64.yml
+++ b/ci/macos-arm64.yml
@@ -23,10 +23,12 @@ macos-arm64:build:
     - .macos-arm64
     - .build
   needs: ["macos-arm64:depends"]
+  after_script:
+    - mv green.app green-arm64.app
   artifacts:
     name: "$CI_PROJECT_NAME-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
     paths:
-      - green.app
+      - green-arm64.app
 
 macos-arm64:staple:
   tags:
@@ -37,7 +39,7 @@ macos-arm64:staple:
     expire_in: 1 week
     when: always
     paths:
-      - green.app
+      - green-arm64.app
   needs: ["macos-arm64:build"]
   script:
-    - tools/macos-staple.sh
+    - tools/macos-staple.sh green-arm64.app
