--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ stages:
   variables:
     GIT_SUBMODULE_STRATEGY: recursive
   script:
-    - $PREFIX/bin/qt-cmake -DGREEN_ENV=Testing -DGREEN_BUILD_ID=-$CI_COMMIT_SHORT_SHA -DGREEN_LOG_FILE=$CI_COMMIT_BRANCH .
+    - $PREFIX/bin/qt-cmake -DGREEN_ENV=$([[ $CI_COMMIT_REF_NAME = release_* ]] && echo "Production" || echo "Testing") -DGREEN_BUILD_ID=$([[ $CI_COMMIT_REF_NAME = release_* ]] && echo "" || echo "$CI_COMMIT_SHORT_SHA") -DGREEN_LOG_FILE=$CI_COMMIT_BRANCH .
     - make -j
 
 include:
