ci: explicit includes

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,4 +20,10 @@ stages:
     - make -j
 
 include:
-  - local: 'ci/*.yml'
+  - local: 'ci/lint.yml'
+  - local: 'ci/linux-x86_64.yml'
+  - local: 'ci/windows-x86_64.yml'
+  - local: 'ci/macos-arm64.yml'
+  - local: 'ci/macos-x86_64.yml'
+  - local: 'ci/macos-universal.yml'
+  - local: 'ci/package.yml'
