build: linux appimage without wayland

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.16)
 
 project(green VERSION 1.3.0 LANGUAGES CXX)
 
+option(GREEN_WAYLAND "Include Wayland support" OFF)
+
 if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE Debug)
 endif()
@@ -37,7 +39,9 @@ if (WIN32)
 elseif (APPLE)
     find_library(SECURITY Security REQUIRED)
 elseif (UNIX)
-    find_package(Qt6 6.4 COMPONENTS WaylandClient REQUIRED)
+    if (GREEN_WAYLAND)
+        find_package(Qt6 6.4 COMPONENTS WaylandClient REQUIRED)
+    endif()
     set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++ -fstack-protector -Wl,--wrap=__divmoddi4 -Wl,--wrap=log2f")
 endif()
 
@@ -94,8 +98,12 @@ if (WIN32)
 elseif (APPLE)
     set_target_properties(green PROPERTIES OUTPUT_NAME "Blockstream Green")
 elseif (UNIX)
-    target_link_libraries(green PRIVATE dl Qt6::WaylandClient)
-    qt_import_plugins(green INCLUDE Qt6::QXcbIntegrationPlugin Qt6::QWaylandIntegrationPlugin)
+    target_link_libraries(green PRIVATE dl)
+    qt_import_plugins(green INCLUDE Qt6::QXcbIntegrationPlugin)
+    if (GREEN_WAYLAND)
+        target_link_libraries(green PRIVATE Qt6::WaylandClient)
+        qt_import_plugins(green INCLUDE Qt6::QWaylandIntegrationPlugin)
+    endif()
 endif()
 
 install(TARGETS green
