--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,8 +15,9 @@ stages:
   stage: build
   variables:
     GIT_SUBMODULE_STRATEGY: recursive
+    GREEN_WAYLAND: "OFF"
   script:
-    - $PREFIX/bin/qt-cmake -DGREEN_ENV=$([[ $CI_COMMIT_REF_NAME = release_* ]] && echo "Production" || echo "Testing") -DGREEN_BUILD_ID=$([[ $CI_COMMIT_REF_NAME = release_* ]] && echo "" || echo "$CI_COMMIT_SHORT_SHA") -DGREEN_LOG_FILE=$CI_COMMIT_BRANCH .
+    - $PREFIX/bin/qt-cmake -DGREEN_ENV=$([[ $CI_COMMIT_REF_NAME = release_* ]] && echo "Production" || echo "Testing") -DGREEN_BUILD_ID=$([[ $CI_COMMIT_REF_NAME = release_* ]] && echo "" || echo "$CI_COMMIT_SHORT_SHA") -DGREEN_LOG_FILE=$CI_COMMIT_BRANCH -DGREEN_WAYLAND=$GREEN_WAYLAND .
     - make -j
 
 include:
