ci: update windows signing certificate

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,9 @@
+variables:
+  CI_DISPOSABLE_ENVIRONMENT: "true"
+  DOCKER_DRIVER: overlay2
+  DOCKER_HOST: tcp://localhost:2375
+  DOCKER_TLS_CERTDIR: ""
+
 stages:
   - lint
   - depends
@@ -21,10 +27,11 @@ stages:
     - make -j
 
 include:
-  - local: 'ci/lint.yml'
-  - local: 'ci/linux-x86_64.yml'
-  - local: 'ci/windows-x86_64.yml'
-  - local: 'ci/macos-arm64.yml'
-  - local: 'ci/macos-x86_64.yml'
-  - local: 'ci/macos-universal.yml'
-  - local: 'ci/package.yml'
+  - local: "ci/docker.yaml"
+  - local: "ci/lint.yml"
+  - local: "ci/linux-x86_64.yml"
+  - local: "ci/windows-x86_64.yml"
+  - local: "ci/macos-arm64.yml"
+  - local: "ci/macos-x86_64.yml"
+  - local: "ci/macos-universal.yml"
+  - local: "ci/package.yml"
