--- a/ci/linux-x86_64.yml
+++ b/ci/linux-x86_64.yml
@@ -3,8 +3,7 @@ linux-x86_64:build-appimage:
   extends:
     - .build
   tags:
-    - qt
-    - linux-x86_64
+    - cloud
   after_script:
     - tools/appimage.sh $CI_PROJECT_DIR
   artifacts:
@@ -19,8 +18,7 @@ linux-x86_64:build-binary:
   extends:
     - .build
   tags:
-    - qt
-    - linux-x86_64
+    - cloud
   artifacts:
     name: "$CI_PROJECT_NAME-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
     paths:
