--- a/ci/windows-x86_64.yml
+++ b/ci/windows-x86_64.yml
@@ -3,8 +3,7 @@ windows-x86_64:build:
   extends:
     - .build
   tags:
-    - qt
-    - windows-x86_64
+    - cloud
   artifacts:
     name: "$CI_PROJECT_NAME-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
     paths:
