ci: multistage dockerfile

--- a/ci/linux-x86_64/Dockerfile
+++ b/ci/linux-x86_64/Dockerfile
@@ -6,10 +6,27 @@ ENV HOST=linux
 ENV ARCH=x86_64
 ENV PKG_CONFIG_PATH=$PREFIX/lib/pkgconfig
 ENV CMAKE_INSTALL_PREFIX=$PREFIX
-COPY tools tools
+RUN ln -s /usr/bin/python3.8 /usr/bin/python3.10
 
-FROM base AS builder
-RUN . /root/.cargo/env && tools/builddeps.sh
+FROM base AS hidapi
+COPY tools/buildlibusb.sh tools/buildhidapi.sh tools/
+RUN tools/buildlibusb.sh && tools/buildhidapi.sh
+
+FROM base AS countly
+COPY tools/buildcountly.sh tools/
+RUN tools/buildcountly.sh
+
+FROM base AS gdk
+COPY tools/buildgdk.sh tools/
+RUN . /root/.cargo/env && tools/buildgdk.sh
+
+FROM base AS qt
+COPY tools/buildqt.sh tools/
+COPY tools/patches/ tools/patches/
+RUN tools/buildqt.sh
 
 FROM base
-COPY --from=builder /depends /depends
+COPY --from=hidapi /depends /depends
+COPY --from=countly /depends /depends
+COPY --from=gdk /depends /depends
+COPY --from=qt /depends /depends
