--- a/ci/windows-x86_64/Dockerfile
+++ b/ci/windows-x86_64/Dockerfile
@@ -8,11 +8,27 @@ ENV PKG_CONFIG_PATH=$PREFIX/lib/pkgconfig
 ENV CMAKE_INSTALL_PREFIX=$PREFIX
 ENV CMAKE_TOOLCHAIN_FILE=$PWD/cmake/mingw-w64-x86_64.cmake
 ENV QT_HOST_PATH=/depends/linux-x86_64
-COPY tools tools
 COPY cmake cmake
 
-FROM base AS builder
-RUN . /root/.cargo/env && tools/builddeps.sh
+FROM base AS hidapi
+COPY tools/buildlibusb.sh tools/buildhidapi.sh tools/
+RUN tools/buildlibusb.sh && tools/buildhidapi.sh
+
+FROM base AS countly
+COPY tools/buildcountly.sh tools/
+RUN tools/buildcountly.sh
+
+FROM base AS gdk
+COPY tools/buildgdk.sh tools/
+RUN . /root/.cargo/env && tools/buildgdk.sh
+
+FROM base AS qt
+COPY tools/buildqt.sh tools/
+COPY tools/patches/ tools/patches/
+RUN tools/buildqt.sh
 
 FROM base
-COPY --from=builder /depends /depends
+COPY --from=hidapi /depends /depends
+COPY --from=countly /depends /depends
+COPY --from=gdk /depends /depends
+COPY --from=qt /depends /depends
