--- a/ci/macos-arm64.yml
+++ b/ci/macos-arm64.yml
@@ -7,7 +7,7 @@
     PKG_CONFIG_PATH: "$PREFIX/lib/pkgconfig"
     CMAKE_INSTALL_PREFIX: "$PREFIX"
   cache:
-    key: macos_arm64
+    key: 1.2.x_macos_arm64
     paths: [depends/]
   tags:
     - macos-arm64
