--- a/ci/macos-x86_64.yml
+++ b/ci/macos-x86_64.yml
@@ -7,7 +7,7 @@
     PKG_CONFIG_PATH: "$PREFIX/lib/pkgconfig"
     CMAKE_INSTALL_PREFIX: "$PREFIX"
   cache:
-    key: macos_x86_64
+    key: gdk0.67.1_qt6.5.2_macos_x86_64
     paths: [depends/]
   tags:
     - macos-x86_64
