--- a/entitlements_debug.plist
+++ b/entitlements_debug.plist
@@ -3,6 +3,7 @@
 <plist version="1.0">
 <dict>
   <key>com.apple.security.device.camera</key><true/>
+  <key>com.apple.security.device.microphone</key><false/>
   <key>com.apple.security.get-task-allow</key><true/>
   <key>com.apple.security.cs.disable-library-validation</key><true/>
 </dict>
