--- a/ci/macos-universal.yml
+++ b/ci/macos-universal.yml
@@ -5,11 +5,12 @@ macos-universal:build:
   artifacts:
     name: "$CI_PROJECT_NAME-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
     paths:
-      - "Blockstream Green.app"
+      - "macos-universal/Blockstream Green.app"
   needs: ["macos-arm64:build", "macos-x86_64:build"]
   script:
-    - cp -R "macos-x86_64/Blockstream Green.app" .
-    - lipo -create -output "Blockstream Green.app/Contents/MacOS/Blockstream Green" "macos-arm64/Blockstream Green.app/Contents/MacOS/Blockstream Green" "macos-x86_64/Blockstream Green.app/Contents/MacOS/Blockstream Green"
+    - mkdir macos-universal
+    - cp -R "macos-x86_64/Blockstream Green.app" macos-universal/
+    - lipo -create -output "macos-universal/Blockstream Green.app/Contents/MacOS/Blockstream Green" "macos-arm64/Blockstream Green.app/Contents/MacOS/Blockstream Green" "macos-x86_64/Blockstream Green.app/Contents/MacOS/Blockstream Green"
 
 macos-universal:staple:
   tags:
@@ -20,10 +21,12 @@ macos-universal:staple:
     expire_in: 1 week
     when: always
     paths:
-      - "Blockstream Green.app"
-      - "Blockstream Green.dmg"
+      - "macos-universal/Blockstream Green.app"
+      - "macos-universal/Blockstream Green.dmg"
   needs: ["macos-universal:build"]
   script:
+    - mv "macos-universal/Blockstream Green.app" "Blockstream Green.app"
     - tools/macos-staple.sh "Blockstream Green.app"
     - tools/packdmg.sh "Blockstream Green.app"
     - tools/macos-staple.sh "Blockstream Green.dmg"
+    - mv "Blockstream Green.app" "Blockstream Green.dmg" macos-universal/
