--- a/ci/macos-x86_64.yml
+++ b/ci/macos-x86_64.yml
@@ -40,6 +40,11 @@ macos-x86_64:staple:
     when: always
     paths:
       - "macos-x86_64/Blockstream Green.app"
+      - "macos-x86_64/Blockstream Green.dmg"
   needs: ["macos-x86_64:build"]
   script:
-    - tools/macos-staple.sh "macos-x86_64/Blockstream Green.app"
+    - mv "macos-x86_64/Blockstream green.app" "Blockstream green.app"
+    - tools/macos-staple.sh "Blockstream green.app"
+    - tools/packdmg.sh "Blockstream Green.app"
+    - tools/macos-staple.sh "Blockstream Green.dmg"
+    - mv "Blockstream Green.app" "Blockstream Green.dmg" macos-x86_64/
