--- a/Info.plist.in
+++ b/Info.plist.in
@@ -20,8 +20,8 @@
 	<string></string>
 	<key>NSHumanReadableCopyright</key>
 	<string></string>
-	<key>CFBundleIconFile</key>
-	<string>green.icns</string>
+    <key>CFBundleIconFile</key>
+    <string>green.icns</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>NSPrincipalClass</key>
@@ -30,5 +30,19 @@
 	<true/>
 	<key>NSCameraUsageDescription</key>
 	<string>We use the camera to scan QR codes</string>
+  <key>CFBundleURLTypes</key>
+  <array>
+    <dict>
+      <key>CFBundleTypeRole</key>
+      <string>Editor</string>
+      <key>CFBundleURLName</key>
+      <string>com.blockstream.green</string>
+      <key>CFBundleURLSchemes</key>
+      <array>
+        <string>bitcoin</string>
+        <string>liquidnetwork</string>
+      </array>
+    </dict>
+  </array>
 </dict>
 </plist>
