--- a/ci/macos-arm64.yml
+++ b/ci/macos-arm64.yml
@@ -27,6 +27,7 @@ macos-arm64:build:
     - mv "Blockstream Green.app" macos-arm64
   artifacts:
     name: "$CI_PROJECT_NAME-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
+    expire_in: 1 week
     paths:
       - "macos-arm64/Blockstream Green.app"
 
