--- a/ci/windows-x86_64.yml
+++ b/ci/windows-x86_64.yml
@@ -6,6 +6,7 @@ windows-x86_64:build:
     - cloud
   artifacts:
     name: "$CI_PROJECT_NAME-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
+    expire_in: 1 week
     paths:
       - installer.iss
       - green.exe
