--- a/ci/linux-x86_64/Dockerfile
+++ b/ci/linux-x86_64/Dockerfile
@@ -1,6 +1,6 @@
-FROM ubuntu:bionic AS base
-COPY ci/linux-x86_64/bionic.sh .
-RUN ./bionic.sh
+FROM ubuntu:focal AS base
+COPY ci/linux-x86_64/focal.sh .
+RUN ./focal.sh
 ENV PREFIX=/depends/linux-x86_64
 ENV HOST=linux
 ENV ARCH=x86_64
