--- a/ci/macos-arm64.yml
+++ b/ci/macos-arm64.yml
@@ -7,7 +7,7 @@
     PKG_CONFIG_PATH: "$PREFIX/lib/pkgconfig"
     CMAKE_INSTALL_PREFIX: "$PREFIX"
   cache:
-    key: gdk0.71.0_qt6.7.0_macos_arm64
+    key: macos_arm64_1
     paths: [depends/]
   tags:
     - macos-arm64
