--- a/ci/macos-arm64.yml
+++ b/ci/macos-arm64.yml
@@ -6,8 +6,9 @@
     SHA256SUM: "shasum -a 256"
     PKG_CONFIG_PATH: "$PREFIX/lib/pkgconfig"
     CMAKE_INSTALL_PREFIX: "$PREFIX"
+    gdk_ROOT: "$PREFIX/lib/arm64-apple-darwin/gdk"
   cache:
-    key: macos_arm64_7
+    key: macos_arm64_8
     paths: [depends/]
   tags:
     - macos-arm64
