--- a/ci/macos-x86_64.yml
+++ b/ci/macos-x86_64.yml
@@ -6,8 +6,9 @@
     SHA256SUM: "shasum -a 256"
     PKG_CONFIG_PATH: "$PREFIX/lib/pkgconfig"
     CMAKE_INSTALL_PREFIX: "$PREFIX"
+    gdk_ROOT: "$PREFIX/lib/x86_64-apple-darwin/gdk"
   cache:
-    key: macos_x86_64_7
+    key: macos_x86_64_8
     paths: [depends/]
   tags:
     - macos-x86_64
