--- a/Info.plist.in
+++ b/Info.plist.in
@@ -30,6 +30,8 @@
 	<true/>
 	<key>NSCameraUsageDescription</key>
 	<string>We use the camera to scan QR codes</string>
+	<key>NSCameraUseContinuityCameraDeviceType</key>
+	<true/>
   <key>CFBundleURLTypes</key>
   <array>
     <dict>
