ci: build qt with static openssl

--- a/ci/linux-x86_64/Dockerfile
+++ b/ci/linux-x86_64/Dockerfile
@@ -29,6 +29,7 @@ RUN tools/buildicu.sh
 
 FROM base AS qt
 COPY --from=icu /depends /depends
+COPY --from=gdk /build/gdk/build-gcc/external_deps/ /depends/linux-x86_64/
 COPY tools/buildqt.sh tools/
 RUN tools/buildqt.sh
 
